<resources>
    <string name="hintUsrEmail">Email</string>
    <string name="hintUsrName">Name</string>
    <string name="hintPassword">Password</string>
    <string name="hintRegisterPassword">Password: 6 characters long and one uppercase</string>
    <string name="hintConfirmPassword">Confirm password</string>
    <string name="app_name">FLOCworld</string>
    <string name="strLoading">Loading</string>
    <string name="strGetStarted">Get Started</string>
    <string name="strCreateAccount">Create Account</string>
    <string name="strNeedHelp">Need Help?</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="strContinue">Continue</string>
    <string name="strTermCondition">Terms &amp; Conditions</string>
    <string name="strPick5Interests">Pick %1$d Events That Interests You</string>
    <string name="facebook_app_id">286783521708817</string>
    <string name="fb_login_protocol_scheme">fb286783521708817</string>
    <string name="share_on">Share on</string>
    <string name="strThanking">Thank you !</string>
    <string name="strNoInternet">No internet connection !</string>
    <string name="user_field_is_empty">User name field is empty.</string>
    <string name="email_field_is_not_validate">Email field is not validate.</string>
    <string name="password_field_is_empty">Password field is empty.</string>
    <string name="confirm_password_field_is_empty">Confirm password field is empty.</string>
    <string name="confirm_password_missmatch">confirm password does not match with password.</string>
    <string name="sharedPrefrence">com.cleanslatetech.floc</string>
    <string name="isAppSignIn">isAppSignIn</string>
    <string name="shrdLoginType">loginType</string>
    <string name="shrdUserName">userName</string>
    <string name="shrdUserEmail">userEmail</string>
    <string name="shrdLoginId">loginId</string>
    <string name="shrdSelectedSubmenu">selectedSubmenu</string>
    <string name="shrdSelectedMenu">selectedMenu</string>
    <string name="shrdActivityId">activityId</string>
    <string name="shrdStringPic">shrdStringPic</string>
    <string name="shrdAllCategoryList">allCategoryList</string>
    <string name="shrdIsInterestSelected">isInterestSelected</string>
    <string name="shrdSelectedCategory">selectedCategory</string>
    <string name="shrdMyProfile">myProfileData</string>
    <string name="facebookLogin">facebookLogin</string>
    <string name="googleLogin">googleLogin</string>
    <string name="appLogin">appLogin</string>
    <string name="strconform">Confirm</string>
    <string name="strOTPTest">OTP is sent on</string>
    <string name="password_length_error_message">The Password must be at least 6 characters long.</string>
    <string name="password_hasUpperCase_error_message">Passwords must have at least one uppercase (\'A\'-\'Z\').</string>
    <string name="interestCategory">interestCategory</string>
    <string name="eventimage">EventImage</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_logout">Log out</string>
    <string name="home">Home</string>
    <string name="create_floc">Create Floc</string>
    <string name="events">Events</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="recent_flocs">Recent Flocs</string>
    <string name="much_much_more">Much much more ..</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="f_amp_q">FAQS</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="my_flocworld">My FLOCworld</string>
    <string name="experiential">Experiential</string>
    <string name="professional">Professional</string>
    <string name="personal">Personal</string>
    <string name="activity">Activity</string>
    <string name="upload_pictures">Upload Pictures</string>
    <string name="upload_video">Upload Video</string>
    <string name="comment">Comment</string>
    <string name="running_floc">Running Floc</string>
    <string name="completed_floc">Completed Floc</string>
    <string name="pause_floc">Pause Floc</string>
    <string name="invite_users_to_event">Invite Users To Event</string>
    <string name="invite_friend">Invite Friends</string>
    <string name="cancelled_floc">Cancelled Floc</string>
    <string name="request_to_join">Request To Join</string>
    <string name="my_profile">My Profile</string>
    <string name="financial">Financial</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="setting">Settings</string>
    <string name="change_password">Change Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="name">Name:</string>
    <string name="category">Category: </string>
    <string name="description">Description:</string>
    <string name="picture">Picture:</string>
    <string name="start_date">Start Date:</string>
    <string name="start_hour">Start Hour:</string>
    <string name="end_date">End Date:</string>
    <string name="end_hour">End Hour:</string>
    <string name="select_price_type">Select Price Type:</string>
    <string name="price">Price:</string>
    <string name="member_count">Member Count:</string>
    <string name="website_url">Website/URL:</string>
    <string name="city">City:</string>
    <string name="area">Area:</string>
    <string name="address">Address:</string>
    <string name="state">State:</string>
    <string name="concierge_services">Concierge Services:</string>
    <string name="event_management_services">Event Management Services:</string>
</resources>