<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/floc_mobile_apps_main_bg"
    android:fillViewport="true"
    tools:context="com.cleanslatetech.floc.activities.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strCreateAccount"
                android:textSize="@dimen/register_screen_texts"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/btn_google_sign_register"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <com.facebook.login.widget.LoginButton
                    xmlns:facebook="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/btn_facebook_register"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="12dp"
                    facebook:com_facebook_login_text="Sign In"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/dottedlinedivider"
                    android:layerType="software"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="OR"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_weight="1.6"/>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/dottedlinedivider"
                    android:layerType="software"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"/>
            </LinearLayout>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/idRegisterUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:inputType="text"
                android:padding="10dp"
                android:background="@drawable/blackroundrectangle"
                android:textColor="@color/white"
                android:hint="@string/hintUsrName"
                android:textColorHint="@color/colorPrimary"
                android:drawableLeft="@drawable/ic_person_pin_white"/>

            <TextView
                android:id="@+id/errorNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="10dp"
                android:text="@string/user_field_is_empty"
                android:textSize="@dimen/fourteen_textsize"
                android:textColor="@color/google_color"
                android:visibility="gone"/>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/idRegisterUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/blackroundrectangle"
                android:textColor="@color/white"
                android:hint="@string/hintUsrEmail"
                android:textColorHint="@color/colorPrimary"
                android:drawableLeft="@drawable/ic_email_white"/>
            <TextView
                android:id="@+id/errorEmailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="10dp"
                android:text="@string/email_field_is_not_validate"
                android:textSize="@dimen/fourteen_textsize"
                android:textColor="@color/google_color"
                android:visibility="gone"/>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/idRegisterUserPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/blackroundrectangle"
                android:textColor="@color/white"
                android:hint="@string/hintPassword"
                android:textColorHint="@color/colorPrimary"
                android:drawableLeft="@drawable/ic_lock_outline_white"/>

            <TextView
                android:id="@+id/errorPwdText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="10dp"
                android:text="@string/password_field_is_empty"
                android:textSize="@dimen/fourteen_textsize"
                android:textColor="@color/google_color"
                android:visibility="gone"/>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/idRegisterUserConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/blackroundrectangle"
                android:textColor="@color/white"
                android:hint="@string/hintConfirmPassword"
                android:textColorHint="@color/colorPrimary"
                android:drawableLeft="@drawable/ic_lock_outline_white"/>

            <TextView
                android:id="@+id/errorCnfrmPwdText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="10dp"
                android:text="@string/confirm_password_field_is_empty"
                android:textSize="@dimen/fourteen_textsize"
                android:textColor="@color/google_color"
                android:visibility="gone"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/idRegisterContinueBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/orangeroundrectangle"
                android:text="@string/strContinue"
                android:textColor="@color/white"
                android:onClick="registerUser"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="@string/strTermCondition"
                android:textSize="@dimen/login__screen_texts"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>
